# rdf-explorer

api/: Dockerfile  pyproject.toml
api/app/: main.py  store.py
api/app/routers/: datasets.py  sparql.py
api/tests/: test_datasets.py  test_sparql.py
ui/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/apps/web/src/components/: RDFExplorer.tsx
ui/apps/web/src/components/__tests__/: RDFExplorer.test.tsx
ui/apps/web/src/hooks/: useSHACLValidation.ts
